Fixed menu on dark mode.

--- a/resources/css/index/style.css
+++ b/resources/css/index/style.css
@@ -52,7 +52,8 @@
 	/*--------------- Main enu ---------------*/
 	#black-square {
 		@apply
-			bg-black;
+			bg-black
+			dark:bg-white;
 	}
 
 	#menu-wrapper {
@@ -65,7 +66,8 @@
 	#menu-wrapper-under {
 		@apply
 			no-underline
-			text-white;
+			text-white
+			dark:text-black;
 	}
 
 	.menu a {
@@ -76,7 +78,8 @@
 
 	#menu a {
 		@apply
-			hover:bg-transparent;
+			hover:bg-transparent
+			dark:hover:text-white;
 	}
 
 	#menu a.active, #menu-under a.active {
